[tool.poetry]
name = "mango-habanero-be"
version = "0.1.0"
description = "Backend for Mango Habanero."
authors = ["Mango Habanero <main@mango-habanero.dev>"]
readme = "README.md"
packages = [{include = "mango_habanero_be"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
fixable = ["ALL"]
line-length = 88
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]