[tool.poetry]
name = "mh-backend"
authors = ["Mango Habanero <main@mango-habanero.dev>"]
description = "Backend for Mango Habanero."
homepage = "https://mango-habanero.dev"
packages = [
    { include = "src", from = "." }
]
repository = "https://github.com/PhilipWafula/mango-habanero-be"
version = "0.4.0"

[tool.poetry.dependencies]
asgi-correlation-id = "^4.3.1"
click = "^8.1.7"
fastapi = "^0.110.3"
granian = {extras = ["reload"], version = "^1.3.1"}
python = "^3.12"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.0"
python-semantic-release = "^9.7.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mhcli = "src.cli:entrypoint"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.semantic_release]
branch = "main"
commit_message = "chore(release): Release {version} 🚀."
major_on_zero = false
upload_to_pypi = false
upload_to_release = true
version_variable = [
    "app/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
